--- a/projects/storefront/src/app/app.component.html
+++ b/projects/storefront/src/app/app.component.html
@@ -1,13 +1,9 @@
 <app-header></app-header>
 
-<main style="overflow-x: hidden;">
+<main style="overflow-x: hidden">
   <router-outlet></router-outlet>
   <app-notification-toast></app-notification-toast>
 </main>
-<!-- Cart Notification -->
-<div *ngIf="showCartNotification" class="cart-notification">
-  {{ tKeys.SF_CART_NOTIFICATION_ITEM_ADDED | translate }}
-</div>
 
 <app-cart-drawer></app-cart-drawer>
 
