--- a/projects/storefront/src/app/app.component.html
+++ b/projects/storefront/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-
-<main style="overflow-x: hidden;">
+<!--change hidden to visible-->
+<main style="overflow-x: visibale;">
   <router-outlet></router-outlet>
   <app-notification-toast></app-notification-toast>
 </main>
