--- a/projects/storefront/src/app/checkout/checkout-page/checkout-page.component.scss
+++ b/projects/storefront/src/app/checkout/checkout-page/checkout-page.component.scss
@@ -1,15 +1,27 @@
 @use '../styles/variables' as *;
-
+::ng-deep {
+  .checkout-page, 
+  .checkout-page__main, 
+  .checkout-page__container,
+  .checkout-page__grid {
+    overflow: visible !important;
+  }
+}
 .page-header{
   margin-right:1rem;
   margin-bottom: 5rem;
+}
+.checkout-page__main,
+.checkout-page__container,
+.checkout-page {
+  overflow: visible;
 }
 
 .checkout-page {
   background-color: $background-color;
   color: $text-color;
   min-height: 100vh;
-  align-items: start;
+  align-items: stretch;
   padding-bottom: 4rem;
   &__header {
     padding: 2rem 0;
@@ -17,7 +29,6 @@
   }
 
   &__container {
-    max-width: 100%;
     margin: 0 auto;
     padding: 0 0rem ;
   }
@@ -31,33 +42,31 @@
   }
 
   &__grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    width: 100%;
-    align-items: start;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  align-items: stretch; 
+    height: auto;
+  max-height: none;
+
     @media (min-width: 1024px) {
       grid-template-columns: repeat(12, 1fr);
       gap: 3rem;
-      align-items: start;
+      align-items: stretch;
     }
   }
 
-&__grid-left {
-display: block; 
-  margin-left: 1rem;
-  
-  // הגדרות הסטיקי
-  position: sticky;
-  top: 2rem; 
-  
-  // מוודא שהגובה הוא רק לפי התוכן (הכרטיס והכפתור) ולא יותר
-  height: max-content; 
-
-  @media (min-width: 1024px) {
+  &__grid-left {
     grid-column: span 4;
-    align-self: start; // חשוב מאוד כדי שלא יימתח לגובה של צד ימין
-  }
-}  
+    margin-left: 1rem;
+    height: 100%;
+    align-self: stretch;    
+    overflow: visible !important;
+      @media (min-width: 1024px) {
+      grid-column: span 4 ;
+      align-self: stretch;
+    }
+  }  
+
   &__grid-right {
     grid-row: 1; 
     @media (min-width: 1024px) {
@@ -97,10 +106,7 @@ display: block;
   margin-top: 2rem;
   height: 3.5rem;
   margin-right: 1rem;
-  /* רוחב מלא כדי להתאים לעמודה */
   width: 13rem; 
-  
-  /* עיצוב גלולה אחיד */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -114,7 +120,6 @@ display: block;
   font-size: 1rem;
   font-weight: 500;
   transition: all 0.3s ease;
-  position: relative;
 
   &:hover:not(:disabled) {
     opacity: 0.9;
@@ -143,3 +148,4 @@ display: block;
     transform: translateX(10px);
   }
 }
+  
