--- a/projects/storefront/src/app/checkout/components/order-summary-card/order-summary-card.component.scss
+++ b/projects/storefront/src/app/checkout/components/order-summary-card/order-summary-card.component.scss
@@ -1,7 +1,18 @@
-.order-summary-card {
+:host {
+display: block;
+  position: -webkit-sticky;
   position: sticky;
-  top: 112px; 
+  top: 2rem;
+  z-index: 10;
+  align-self: start; 
+  height: auto;      
   width: 100%;
+}
+
+.order-summary-card {
+  overflow: visible;
+  width: 100%;
+  height: fit-content; 
   background: #ffffff;
   border: 1px solid #e5e7eb; 
   border-radius: 0.75rem;     
@@ -9,9 +20,8 @@
   margin-left: 2rem;        
   box-sizing: border-box;
   &__title {
-    font-size: 1.25rem;      
-    font-weight: 500;        
-    color: #111827;       
+  color:#000000;
+  font-size: 1.25rem;
     margin-bottom: 1.5rem;   
   }
 
@@ -79,13 +89,11 @@
     display: flex;
     justify-content: space-between;
     font-size: 0.875rem;     
-    
     span:first-child {
-      color: #6b7280;        
+      color: #6b7280;   
     }
-    
     span:last-child {
-      color: #111827;        
+      color: #6b7280;        
     }
   }
 
@@ -98,3 +106,7 @@
     color: #111827;
   }
 }
+  :host-context(html), :host-context(body) {
+    overflow: visible !important;
+    height: auto !important;
+  }
