add support he/en register+login

--- a/projects/storefront/src/app/login-page/login-page.component.html
+++ b/projects/storefront/src/app/login-page/login-page.component.html
@@ -4,7 +4,7 @@
       <nav class="breadcrumb mb-4">
         <a routerLink="/">{{ tKeys.SF_MINI_NAVIGATE_HOME | translate }}</a>
         <span>/</span>
-        <span class="current">{{ tKeys.SF_MINI_NAVIGATE_REGISTER | translate }}</span>
+        <span class="current">{{ tKeys.SF_MINI_NAVIGATE_LOGIN | translate }}</span>
       </nav>
       <h1 class="text-display">{{ tKeys.SF_LOGIN_PAGE_TITLE | translate }}</h1>
       <hr class="separator" />
