--- a/projects/storefront/src/app/checkout/checkout-page/checkout-page.component.html
+++ b/projects/storefront/src/app/checkout/checkout-page/checkout-page.component.html
@@ -5,11 +5,11 @@
       <div class="checkout-page__header-wrapper">
         <header class="page-header">
           <nav class="breadcrumb">
-            <a routerLink="/">דף הבית</a>
+            <a routerLink="/">{{ tKeys.SF_MINI_NAVIGATE_HOME | translate }}</a>
             <span class="separator">/</span>
-            <a routerLink="/cart">עגלה</a>
+            <a routerLink="/cart">{{ tKeys.SF_MINI_NAVIGATE_CART | translate }}</a>
             <span class="separator">/</span>
-            <span class="current">תשלום</span>
+            <span class="current">{{ tKeys.SF_MINI_NAVIGATE_CHECKOUT | translate }}</span>
           </nav>
           <h1 class="text-display">תשלום</h1>
         </header>
